testsuite/tests/typecheck/should_compile/FD3.stderr

FD3.hs:15:15: error:
    Couldn't match type ‘a’ with ‘(String, a)’
      arising from a functional dependency between:
        constraint ‘MkA (String, a) a’ arising from a use of ‘mkA’
        instance ‘MkA a1 a1’ at FD3.hs:12:10-16
    ‘a’ is a rigid type variable bound by
        the type signature for: translate :: (String, a) -> A a
        at FD3.hs:14:14
    Relevant bindings include
      a :: (String, a) (bound at FD3.hs:15:11)
      translate :: (String, a) -> A a (bound at FD3.hs:15:1)
    In the expression: mkA a
    In an equation for ‘translate’: translate a = mkA a
